# matmul

./: .gitignore  Cargo.toml  Dockerfile  GPU_README.md  README.md  analyze_fastest.py  analyze_results.py  benchmark_all.sh  benchmark_fastest.sh  build.rs  build_gpu.sh  rustfmt.toml  setup.sh  tt_xla_backend  tt_xla_backend.py
kernels/: gpu_kernel.c  matmul_kernel.c  matmul_kernel.h  matmul_tt.cpp  tt_xla_backend.c  tt_xla_backend.cpp
results/: metrics.json
src/: bench.rs  main.rs  validate.rs
src/matmul/: blis.rs  gpu.rs  mod.rs  naive.rs  optimized.rs  parallel.rs  tiled.rs  vectorized.rs
tests/: small_test.json  test_workload.json
