[package]
name = "matmul"
version = "0.1.0"
edition = "2024"

[features]
default = []
blis = []
parallel = []
vectorized = []
gpu = []

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[build-dependencies]
cc= "1.2"
pkg-config = "0.3"