[package]
name = "matmul"
version = "1.0.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "High-performance matrix multiplication benchmark suite with multiple implementations"
repository = "https://github.com/yourusername/matmul"
keywords = ["matrix", "multiplication", "benchmark", "performance", "blas"]
categories = ["algorithms", "mathematics", "science"]
readme = "README.md"

[features]
default = []
blis = []
parallel = []
vectorized = []
gpu = []

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[build-dependencies]
cc= "1.2"
pkg-config = "0.3"